finish planService tests